Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57227

Thread-safety in QJSEngine

XMLWordPrintable

      While working with QJSEngine in a threaded environment, I noticed several crashes that made me think that it was not thread-safe. After a quick search on this tracker, I found several issues that confirm this. However the documentation doesn't state anything about it.

      My suggestion is to clarify the thread-safe status of QJSEngine and all related classes in the documentation. If it's not thread-safe, then explain how to efficiently protect it (ie. what classes / functions must be protected from concurrent access).

      I've also seen that V8 itself had specific mechanisms to work in threaded environments, maybe it would be a good (more efficient) idea to propagate them in the Qt API?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            docteam Qt Documentation Team
            laurentgom Laurent
            Votes:
            6 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes